UtahLiveDataTest/src/objects/TermCondition__c.object
<CustomObject>
    <description>[Business] Terms and Conditions for Grants ,Awards (The lookup to Package may not be required in this case )</description>
    <fields>
        <fullName>Acknowledgement__c</fullName>
        <label>Acknowledgement</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Agreement1__c</fullName>
        <description>This field is used in Grantor: Terms and Conditions form.</description>
        <label>Agreement1</label>
        <length>22768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AmountWithheld__c</fullName>
        <label>Percentage of Award Amount Withheld</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Announcement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Announcement</label>
        <referenceTo>Announcement__c</referenceTo>
        <relationshipLabel>Terms and Conditions</relationshipLabel>
        <relationshipName>Terms_and_Conditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ApprovalRequireNewAward__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this is marked as Yes, system shall ask the reviewer upon approval, if a new award needs to be created.</description>
        <label>Approval Require a New Award?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AutoAddToAward__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, the Term/Condition will be automatically added to the Award</inlineHelpText>
        <label>Auto Add to Award</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AvailabilityDate__c</fullName>
        <inlineHelpText>Date on which the Post-Award submission will be available to the external user</inlineHelpText>
        <label>Availability Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AwardName__c</fullName>
        <formula>Award__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Award Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Award__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Award</label>
        <referenceTo>Award__c</referenceTo>
        <relationshipName>Terms_and_Conditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CalReportingEndDate__c</fullName>
        <label>Reporting End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CalReportingStartDate__c</fullName>
        <label>Reporting Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Desk Review</fullName>
                </value>
                <value>
                    <fullName>Progress Report</fullName>
                </value>
                <value>
                    <fullName>Program Report</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CopiedFrom__c</fullName>
        <description>ID value of field from where Term &amp;  Condition Record is created</description>
        <label>Copied From</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateSigned__c</fullName>
        <label>DateSigned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>DueDateDays__c</fullName>
        <inlineHelpText>How many days after the end of the reporting period?</inlineHelpText>
        <label>Due Date Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EffectiveFrom__c</fullName>
        <description>Allow user to enter a date. Prepopulated current date by default. This date cannot be in the past. Has to be current or future. The term can be added to grants/awards starting from the effective date. Required.</description>
        <label>Effective From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EffectiveTill__c</fullName>
        <description>Date till when Term and Conditions are valid</description>
        <label>Effective Till</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FixedEndDate__c</fullName>
        <description>The date starting when the term becomes inactive.</description>
        <inlineHelpText>The date starting when the term becomes inactive. This field gets populated only if &apos;Report End Date&apos; is &apos;Fixed&apos;</inlineHelpText>
        <label>Fixed End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FixedStartDate__c</fullName>
        <description>The date starting when the term becomes active.</description>
        <inlineHelpText>The date starting when the term becomes active. This field gets populated only if &apos;Report Start Date&apos; is &apos;Fixed&apos;.</inlineHelpText>
        <label>Fixed Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                    <default>true</default>
                    <label>Fixed</label>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semi-Annually</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GrantTitle__c</fullName>
        <formula>Award__r.Grant__r.ProjectTitle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grant Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grant</label>
        <referenceTo>Grant__c</referenceTo>
        <relationshipName>Terms_and_Conditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GranteePOC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>External user who will receive the task alerts for post award submission.</inlineHelpText>
        <label>Grantee POC</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Terms_and_Conditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HideAutoAdd__c</fullName>
        <formula>If(Award__c==null,false,true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Auto Add</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideDeleteBtn__c</fullName>
        <formula>If(ISPICKVAL(Status__c,&apos;Draft&apos;), false, true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Delete Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideEditBtn__c</fullName>
        <description>Logic for Hiding Edit Button</description>
        <formula>OR(AND(Program__c=null,Award__c=null,Text(Status__c)=&apos;Active&apos;),
   AND(Award__c!=null,Award__r.HideNewBtn__c),
   AND(Program__c!=null,NOT(ISPICKVAL(Program__r.Status__c,&apos;Created&apos;)))
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Logic for Hiding Edit Button</inlineHelpText>
        <label>Hide Edit Btn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideNewBtn__c</fullName>
        <formula>IF(Award__c!=null,Award__r.HideNewBtn__c,Award__r.HideNewBtn__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide New Buttons</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideProgramEdit__c</fullName>
        <formula>NOT(ISPICKVAL(Program__r.Status__c,&apos;Created&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Program Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InactiveOn__c</fullName>
        <description>Allow user to enter a date. The date has to be in the future. The term will no longer be available to be added to awards/grants starting this date. This field is optional.</description>
        <label>Inactive On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InstructionsToGrantee__c</fullName>
        <label>Instructions to Grantee</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IsFixed__c</fullName>
        <formula>ISPICKVAL( ReportingFrequency__c ,&apos;Fixed&apos;)</formula>
        <label>IsFixed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPaymentRequest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsPaymentRequest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsRecurring__c</fullName>
        <formula>ISPICKVAL( ReportingFrequency__c , &apos;Recurring&apos;)</formula>
        <label>IsRecurring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LegislativeMgmtReference__c</fullName>
        <description>Legislative/Managament Reference</description>
        <label>Legislative/Managament Reference</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentRequestPackage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Request Package</label>
        <referenceTo>GNT__Package__c</referenceTo>
        <relationshipName>Terms_and_Conditions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipName>Terms_and_Conditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReportEndDate__c</fullName>
        <description>Date on which the report&apos;s frequency should end</description>
        <inlineHelpText>Budget Period Start Date - The reporting cycle should end on current Budget Period End Date 
Fixed Date - end on a fixed date</inlineHelpText>
        <label>Ending Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Budget Period End Date</fullName>
                </value>
                <value>
                    <fullName>Fixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReportName__c</fullName>
        <label>Report Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReportStartDate__c</fullName>
        <description>Used for Post Award Submission Report creation</description>
        <inlineHelpText>Budget Period Start Date - The reporting cycle should start from current Budget Period Start Date
Fixed Date - start from a fixed date</inlineHelpText>
        <label>Beginning Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Budget Period Start Date</fullName>
                </value>
                <value>
                    <fullName>Fixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReportingFrequency__c</fullName>
        <label>Reporting Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Recurring</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReportingPeriod__c</fullName>
        <label>Reporting Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Calendar Year</fullName>
                </value>
                <value>
                    <fullName>Federal Fiscal Year</fullName>
                </value>
                <value>
                    <fullName>State Fiscal Year</fullName>
                </value>
                <value>
                    <fullName>Academic Year</fullName>
                </value>
                <value>
                    <fullName>Award Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SecondaryLocation__c</fullName>
        <label>Other Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SequenceNo__c</fullName>
        <description>Sequence Number of how Terms&amp;Conditions are listed</description>
        <label>Print Sequence No.</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Signature__c</fullName>
        <description>Signature of the User who signed the terms and conditions</description>
        <label>Signature</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SiteVisitDateTime__c</fullName>
        <label>Site Visit Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SiteVisitLocationText__c</fullName>
        <formula>Award__r.Grant__r.InternalOrganization__r.BillingStreet +&apos;  &apos;+ Award__r.Addressline2__c+&apos;,&apos;+ Award__r.Grant__r.InternalOrganization__r.BillingCity +&apos; , &apos;+ Award__r.Grant__r.InternalOrganization__r.BillingState +&apos; , &apos;+ Award__r.Grant__r.InternalOrganization__r.BillingPostalCode	 +&apos; , &apos;+ Award__r.Grant__r.InternalOrganization__r.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site Visit Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SiteVisitLocation__c</fullName>
        <label>Site Visit Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Primary Place of Performance</fullName>
                </value>
                <value>
                    <fullName>Other Location</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SiteVisitPeriod__c</fullName>
        <formula>IF(AND(NOT(ISBLANK(DateValue(VisitEndDateTime__c))),NOT(ISBLANK(DateValue(SiteVisitDateTime__c)))),TEXT(MONTH(DateValue(SiteVisitDateTime__c)))+&quot;/&quot; +TEXT(DAY(DateValue(SiteVisitDateTime__c)))+&quot;/&quot; +TEXT(YEAR(DateValue(SiteVisitDateTime__c)))+&quot;--&quot;+ TEXT(MONTH(DateValue(VisitEndDateTime__c)))+&quot;/&quot; +TEXT(DAY(DateValue(VisitEndDateTime__c)))+&quot;/&quot; +TEXT(YEAR(DateValue(VisitEndDateTime__c))) , &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site Visit Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Federal</fullName>
                </value>
                <value>
                    <fullName>Grant</fullName>
                </value>
                <value>
                    <fullName>Program</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Active, Inactive. If the Effective Date is current or in the past and if the Inactive On date is in the future, the Term is Active. If the Inactive Date is in the past, the term is Inactive. Prepopulated. Read Only.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Fulfilled</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubmissionPackageType__c</fullName>
        <label>Submission Package Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Submission Package</fullName>
                </value>
                <value>
                    <fullName>Attachment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubmissionPackage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submission Package</label>
        <referenceTo>GNT__Package__c</referenceTo>
        <relationshipName>Terms_and_Conditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SubmissionRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether a submission (task) is to be created for the external user?</description>
        <label>Submission Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SubmissionTaskCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submission Task Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SubmissionTitle__c</fullName>
        <label>Submission Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubmissionType__c</fullName>
        <label>Submission Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Progress Report</fullName>
                </value>
                <value>
                    <fullName>Financial Report</fullName>
                </value>
                <value>
                    <fullName>Payment Request</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TaskAvailability__c</fullName>
        <description>The task will be made available to the grantee &apos;X&apos; number of days before the due date, based on the number entered here.</description>
        <inlineHelpText>Enter number of days prior to Due Date</inlineHelpText>
        <label>Task Availability</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TermType__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Term</fullName>
                </value>
                <value>
                    <fullName>Condition</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Title of the term</description>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>State</fullName>
                    <default>true</default>
                    <label>State</label>
                </value>
                <value>
                    <fullName>Program</fullName>
                </value>
                <value>
                    <fullName>Grant</fullName>
                </value>
                <value>
                    <fullName>Award</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UpcomingReportSubmissionDate__c</fullName>
        <label>Upcoming Report Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VisitEndDateTime__c</fullName>
        <description>Site Visit End Date and Time</description>
        <inlineHelpText>Site Visit End Date and Time</inlineHelpText>
        <label>Site Visit End Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WillAgencywithholdFundsifnotSubmit__c</fullName>
        <label>Funds withheld if report isn’t submitted</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>MST:Term and Condition</label>
    <nameField>
        <displayFormat>TC-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Terms and Conditions</pluralLabel>
    <recordTypes>
        <fullName>Condition</fullName>
        <active>true</active>
        <label>Condition</label>
    </recordTypes>
    <recordTypes>
        <fullName>PaymentRequest</fullName>
        <active>true</active>
        <label>Payment Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>ProgressReport</fullName>
        <active>true</active>
        <label>Progress Report</label>
    </recordTypes>
    <recordTypes>
        <fullName>ReportingRequirement</fullName>
        <active>true</active>
        <label>Reporting Requirement</label>
    </recordTypes>
    <recordTypes>
        <fullName>SiteVisit</fullName>
        <active>true</active>
        <label>Site Visit</label>
    </recordTypes>
    <recordTypes>
        <fullName>Term</fullName>
        <active>true</active>
        <description>Related to Awards ( Ramu to rename this object appropriately)</description>
        <label>Term</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>BeginningEndingDate</fullName>
        <active>false</active>
        <errorConditionFormula>IF(ISPICKVAL(ReportStartDate__c,&apos;Project Period Start Date&apos;) &amp;&amp; ISPICKVAL (ReportEndDate__c,&apos;Project Period End Date&apos;),false,true)</errorConditionFormula>
        <errorMessage>Beginning Date and Ending Date should both be From Project Period , Budget Period OR Fixed Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BudgetPeriodStartAndEndDate_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>IF(  ISPICKVAL(ReportStartDate__c,&apos;Budget Period Start Date&apos;) &amp;&amp; ISPICKVAL(ReportEndDate__c,&apos;Budget Period End Date&apos;) &amp;&amp; (Award__r.BudgetPeriodStartDate__c == null || Award__r.BudgetPeriodEndDate__c == null),true,false)</errorConditionFormula>
        <errorMessage>Budget Period Start/End Date needs to be filled out on the award</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Availability_Date</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISCHANGED( AvailabilityDate__c ) ,AvailabilityDate__c &lt; TODAY(),false)</errorConditionFormula>
        <errorDisplayField>AvailabilityDate__c</errorDisplayField>
        <errorMessage>Past date cannot be entered.Please enter a valid date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Effective_Till_Date</fullName>
        <active>true</active>
        <errorConditionFormula>EffectiveTill__c &lt; EffectiveFrom__c</errorConditionFormula>
        <errorDisplayField>EffectiveTill__c</errorDisplayField>
        <errorMessage>Effective Till Date can not be before Effective From Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Fixed_End_Date</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISCHANGED( FixedEndDate__c ) ,FixedEndDate__c &lt; TODAY(),false)</errorConditionFormula>
        <errorDisplayField>FixedEndDate__c</errorDisplayField>
        <errorMessage>Past date cannot be entered.Please enter a valid date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Fixed_Start_Date</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISCHANGED( FixedStartDate__c) ,FixedStartDate__c &lt; TODAY(),false)</errorConditionFormula>
        <errorDisplayField>FixedStartDate__c</errorDisplayField>
        <errorMessage>Past date cannot be entered.Please enter a valid date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Inactive_on_Date</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISCHANGED( InactiveOn__c) ,InactiveOn__c &lt; TODAY(),false)</errorConditionFormula>
        <errorDisplayField>InactiveOn__c</errorDisplayField>
        <errorMessage>Past date cannot be entered.Please enter a valid date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Report_Submission_Date</fullName>
        <active>false</active>
        <errorConditionFormula>IF( ISCHANGED( UpcomingReportSubmissionDate__c) ,UpcomingReportSubmissionDate__c &lt; TODAY(),false)</errorConditionFormula>
        <errorDisplayField>UpcomingReportSubmissionDate__c</errorDisplayField>
        <errorMessage>Past date cannot be entered.Please enter a valid date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_Validation_in_Site_Visit_Dates</fullName>
        <active>false</active>
        <description>Date Validation in Site Visit Dates</description>
        <errorConditionFormula>IF((RecordType.Name ==&apos;Site Visit&apos; ) &amp;&amp; OR(VisitEndDateTime__c &lt; SiteVisitDateTime__c,DateValue(VisitEndDateTime__c) &lt;  Award__r.BudgetPeriod__r.BudgetStartDate__c ,DateValue(VisitEndDateTime__c) &gt;  Award__r.BudgetPeriod__r.BudgetEndDate__c ),true,false)</errorConditionFormula>
        <errorMessage>Site Visit End Date can not be before Site Visit Start Date and it should be in between Budget Period Start Date and Budget Period End Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Due_Date_Days_Cannot_be_Negative</fullName>
        <active>true</active>
        <description>Due Date Days Cannot be Negative</description>
        <errorConditionFormula>DueDateDays__c &lt; 0</errorConditionFormula>
        <errorDisplayField>DueDateDays__c</errorDisplayField>
        <errorMessage>Due Date Days cannot be negative</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FixedDateCantbenullifFixedChosen</fullName>
        <active>true</active>
        <description>Fixed Date Cant be null if Fixed Chosen</description>
        <errorConditionFormula>IF(ISPICKVAL(ReportStartDate__c,&apos;Fixed&apos;) &amp;&amp; ISPICKVAL(ReportEndDate__c,&apos;Budget Period End Date&apos;) || ISPICKVAL(ReportStartDate__c,&apos;Budget Period Start Date&apos;) &amp;&amp; ISPICKVAL(ReportEndDate__c,&apos;Fixed&apos;),true,false)</errorConditionFormula>
        <errorMessage>Please enter the fixed Start and End Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FixedDateValidation</fullName>
        <active>true</active>
        <errorConditionFormula>FixedStartDate__c &gt; FixedEndDate__c</errorConditionFormula>
        <errorMessage>Start date cannot be after end date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FixedDatesCantBeNullIfBothFixedChosen</fullName>
        <active>true</active>
        <errorConditionFormula>IF((ISPICKVAL(ReportStartDate__c,&apos;Fixed&apos;) &amp;&amp; ISPICKVAL(ReportEndDate__c,&apos;Fixed&apos;) )&amp;&amp; (ISBLANK(FixedStartDate__c) || ISBLANK(FixedEndDate__c)),true,false)</errorConditionFormula>
        <errorMessage>Please enter respective dates</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FixedDatesShouldbeWithinBudgetPeriod</fullName>
        <active>true</active>
        <errorConditionFormula>IF((ISPICKVAL(ReportStartDate__c,&apos;Fixed&apos;) &amp;&amp; ISPICKVAL(ReportEndDate__c,&apos;Fixed&apos;)) &amp;&amp; ((FixedStartDate__c &lt; Award__r.BudgetPeriodStartDate__c || FixedStartDate__c &gt; Award__r.BudgetPeriodEndDate__c) || (FixedEndDate__c &lt; Award__r.BudgetPeriodStartDate__c || FixedEndDate__c &gt; Award__r.BudgetPeriodEndDate__c )),true,false)</errorConditionFormula>
        <errorMessage>Fixed Dates have to be within Budget Period Start and End Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PreventUpdationatGrantLevel</fullName>
        <active>false</active>
        <description>Prem - De activated this validation rule because we need to update T&amp;C in the batch job.
Let&apos;s chalk out some other way to handle this validation.</description>
        <errorConditionFormula>IF(AND(
NOT(ISNEW()),NOT(ISBLANK(PRIORVALUE(Grant__c))),ISBLANK( Award__c )
	), 
    TRUE, 
    AND(
		ISCHANGED(Grant__c), NOT(ISBLANK(PRIORVALUE(Grant__c)) )
	)
)</errorConditionFormula>
        <errorMessage>You cannot update a record associated with a grant.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ReportingRequirementEndDateValidation</fullName>
        <active>false</active>
        <description>Reporting Requirement End Date should be in between Budget Period Start Date and Budget Period End date and also greater than Reporting Requirement Start Date.</description>
        <errorConditionFormula>IF(OR(RecordType.Name ==&apos;Reporting Requirement&apos;,RecordType.Name ==&apos;Payment Request&apos;) &amp;&amp; OR(CalReportingEndDate__c &lt; CalReportingStartDate__c ,	CalReportingEndDate__c &lt; Award__r.BudgetPeriod__r.BudgetStartDate__c ,	CalReportingEndDate__c &gt;  Award__r.BudgetPeriod__r.BudgetEndDate__c) ,true,false)</errorConditionFormula>
        <errorMessage>Reporting End Date Should be in between Budget Period Start date and Budget Period End Date  and also greater than Reporting Requirement Start Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ReportingRequirementStartDateValidation</fullName>
        <active>false</active>
        <description>Reporting Requirement Start Date should be in between Budget Period Start Date and Budget Period End date.</description>
        <errorConditionFormula>IF(OR(RecordType.Name ==&apos;Reporting Requirement&apos;,RecordType.Name ==&apos;Payment Request&apos; ) &amp;&amp; OR(	CalReportingStartDate__c &lt; Award__r.BudgetPeriod__r.BudgetStartDate__c ,	CalReportingStartDate__c &gt;  Award__r.BudgetPeriod__r.BudgetEndDate__c) ,true,false)</errorConditionFormula>
        <errorMessage>Reporting Start Date Should be in between Budget Period Start date and Budget Period End Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Select_either_Program_or_Award_or_Grant</fullName>
        <active>false</active>
        <errorConditionFormula>IF( (Award__c == NULL &amp;&amp;  Grant__c == NULL &amp;&amp;  Program__c == NULL) ||  
(Award__c != NULL &amp;&amp;  Grant__c == NULL &amp;&amp;  Program__c == NULL) || 
(Award__c == NULL &amp;&amp;  Grant__c != NULL &amp;&amp;  Program__c == NULL) ||
(Award__c == NULL &amp;&amp;  Grant__c == NULL &amp;&amp;  Program__c != NULL), false, true)</errorConditionFormula>
        <errorMessage>At a time only one of these fields can be populated: Award, Grant or Program.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>StartDate_Validation_in_Site_Visit_Dates</fullName>
        <active>false</active>
        <description>Start Date Validation in Site Visit Dates</description>
        <errorConditionFormula>IF((RecordType.Name ==&apos;Site Visit&apos; &amp;&amp; Award__c != null &amp;&amp; TEXT(Award__r.AwardType__c) == &apos;New&apos;) &amp;&amp; OR(DateValue(SiteVisitDateTime__c) &lt; TODAY(),DateValue(SiteVisitDateTime__c) &lt; Award__r.BudgetPeriod__r.BudgetStartDate__c ,DateValue(SiteVisitDateTime__c) &gt; Award__r.BudgetPeriod__r.BudgetEndDate__c) ,true,false)</errorConditionFormula>
        <errorMessage>Site Visit Start Date can not be before today and should be in between Budget Period Start Date and Budget Period End Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>WithheldMoney</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(WillAgencywithholdFundsifnotSubmit__c,&apos;Yes&apos;) &amp;&amp; ISBLANK(AmountWithheld__c)</errorConditionFormula>
        <errorMessage>Please provide the percentage of amount withheld.</errorMessage>
    </validationRules>
</CustomObject>